[package]
name = "themida_spotter_bn"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
rayon = "1.10"

[dependencies.binaryninja]
git = "https://github.com/Vector35/binaryninja-api.git"
rev = "5accfca2dc53fe5685dbe9e74f519a7f2f657d48"
features = ["rayon"]
